fix codeclimate double quotes strings warning and add extra padding to buttons

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -43,7 +43,7 @@
   font-size: x-small;
   justify-content: center;
   margin: 5px;
-  padding: 2px;
+  padding: 5px;
   width: 75px;
 }
 
